# cpp-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
PalmTree/: CMakeLists.txt
PalmTree/shaders/: pointLight.frag  pointLight.vert  simpleShader.vert
PalmTree/src/: PalmTree.h  ptpch.h
PalmTree/src/PalmTree/: Application.cpp  Application.h  Buffer.cpp  Camera.cpp  Camera.h  Core.h  Descriptors.cpp  Descriptors.h  Device.cpp  Device.h  Entrypoint.h  FrameInfo.h  KeyboardMovementController.cpp  KeyboardMovementController.h  Log.cpp  Log.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  Utils.h  Window.cpp  Window.h
PalmTree/src/PalmTree/EntityComponentSystem/: ComponentArray.h  ComponentManager.h  Components.cpp  Components.h  EntityComponentSystem.cpp  EntityComponentSystem.h  EntityManager.cpp  (+5 more)
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox.cpp
shaders/: pointLight.frag  pointLight.vert  simpleShader.frag  simpleShader.frag.spv  simpleShader.vert  simpleShader.vert.spv
src/: Application.cpp  Application.h  Buffer.h  Camera.cpp  Descriptors.cpp  Device.cpp  Device.h  FrameInfo.h  KeyboardMovementController.cpp  KeyboardMovementController.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  PtApplication.cpp  PtApplication.h  PtBuffer.cpp  PtBuffer.h  PtCamera.cpp  PtCamera.h  PtDescriptors.cpp  PtDescriptors.h  PtDevice.cpp  PtDevice.h  PtFrameInfo.h  PtGameObject.cpp  PtGameObject.h  PtModel.cpp  PtModel.h  PtPipeline.cpp  PtPipeline.h  PtRenderer.cpp  PtRenderer.h  PtSimpleRenderSystem.cpp  PtSimpleRenderSystem.h  PtSwapChain.cpp  PtSwapChain.h  PtWindow.cpp  PtWindow.h  Renderer.h  (+6 more)
src/EntityComponentSystem/: ComponentArray.h  Components.h
src/Systems/: PointLightSystem.h  SimpleRenderSystem.cpp
src/systems/: PtPointLightSystem.cpp  PtPointLightSystem.h  PtSimpleRenderSystem.cpp  PtSimpleRenderSystem.h
(+22 files in other folders)
